# burdells-dogs-platform

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run.py
.github/workflows/: deploy-aws.yml
app/: __init__.py
app/database/: 00_schema.sql  01_users.sql  02_breeds.sql  03_microchip_vendors.sql  04_expense_categories.sql  05_adopters.sql  06_dogs.sql  07_dogbreeds.sql  08_expenses.sql  09_applications.sql  10_approved_applications.sql  11_oauth_update.sql
app/models/: adopter.py  adoption.py  dashboard.py  dog.py  expense.py  report.py  user.py
app/routes/: adoption.py  auth.py  dashboard.py  dogs.py  expenses.py  reports.py
app/static/css/: dog-cards.css  main.css  reports.css  sidebar-fix.css
app/static/js/: adoption.js  application_review.js  dashboard.js  dogs.js  expenses.js  main.js
app/templates/: layout.html  login.html
app/templates/adoption/: application.html  applications.html  process.html  review.html
app/templates/dashboard/: index.html
app/templates/dogs/: add.html  compact_card.html  detail.html  edit.html  list.html
app/utils/: db.py  vite.py
backend/: main.py
backend/api/: deps.py
backend/core/: config.py  db.py  oauth.py  security.py
backend/models/: __init__.py  adoption.py  dog.py  expense.py  user.py
backend/services/: adoption_service.py
backend/tests/: conftest.py  test_adoption_service.py  test_auth.py  test_dashboard.py  test_dog_api.py  test_dog_model.py  test_expense_api.py  test_user_model.py
deploy/: Dockerfile  docker-compose.prod.yml  docker-compose.yml
frontend/: package.json  vite.config.ts
frontend/src/: main.tsx
(+15 files in other folders)
